Set imeOptions and inputType on EditText fields to fix autocompletion. Fixes issue 38

--- a/main/res/layout/add_venue_activity.xml
+++ b/main/res/layout/add_venue_activity.xml
@@ -14,6 +14,7 @@
         android:id="@+id/nameEditText"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:inputType="textCapWords"
         android:hint="Venue Name" />
 
       <TextView
