--- a/main/res/layout/shout_activity.xml
+++ b/main/res/layout/shout_activity.xml
@@ -31,7 +31,9 @@
     android:id="@+id/shoutEditText"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:lines="1"
+    android:inputType="textShortMessage|textAutoCorrect|textCapSentences|textMultiLine"
+    android:imeOptions="actionDone"
+    android:lines="2"
     android:hint="Shout. Shout. Let it all out!                      " />
 
   <Button
