--- a/main/res/layout/tip_add_dialog.xml
+++ b/main/res/layout/tip_add_dialog.xml
@@ -21,5 +21,7 @@
     android:id="@+id/editText"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
+    android:inputType="textShortMessage|textAutoCorrect|textCapSentences|textMultiLine"
+    android:imeOptions=""
     android:lines="3" />
 </LinearLayout>
