--- a/main/res/layout/venue_activity.xml
+++ b/main/res/layout/venue_activity.xml
@@ -24,12 +24,12 @@
         android:id="@+id/venue"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        foursquared:checkinButton="true" />
+        foursquared:checkinButton="true"
+        android:background="#FFFFFF" />
       <FrameLayout
         android:id="@android:id/tabcontent"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:layout_marginTop="3dip">
+        android:layout_height="fill_parent">
       </FrameLayout>
     </LinearLayout>
   </TabHost>
