--- a/main/res/drawable/tab_search.xml
+++ b/main/res/drawable/tab_search.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_focused="true" 
-    	  android:drawable="@drawable/tab_search_focus" />
-    <item android:state_focused="false" 
-    	  android:drawable="@drawable/tab_search_unfocus" />
+<selector
+  xmlns:android="http://schemas.android.com/apk/res/android">
+  <item
+    android:state_selected="true"
+    android:drawable="@drawable/tab_search_focus" />
+  <item
+    android:state_selected="false"
+    android:drawable="@drawable/tab_search_unfocus" />
 </selector>
