Disable chris' button change while we work out the bugs.

--- a/main/res/layout/venue_view.xml
+++ b/main/res/layout/venue_view.xml
@@ -33,8 +33,7 @@
   <Button
     android:id="@+id/internal_checkinButton"
     android:layout_width="wrap_content"
-    android:layout_height="1dip"
-    android:maxHeight="1dip"
+    android:layout_height="wrap_content"
 
     android:layout_alignParentBottom="true"
     android:layout_alignParentRight="true"
@@ -43,15 +42,28 @@
 
     android:enabled="false"
     android:visibility="gone"
-    android:background="@drawable/quick_checkin"
+
+    android:text="Quick Checkin!" />
+
+  <!--  Chris' cool stuff.
+  <Button
+    android:id="@+id/internal_checkinButton"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+
+    android:layout_alignParentRight="true"
+    android:layout_below="@id/internal_venueName"
+
+    android:enabled="false"
+    android:visibility="gone"
 
     android:text="Quick-Checkin"
     android:textAppearance="@android:style/TextAppearance.Small"
     android:shadowColor="#111111"
     android:shadowRadius="1"
     android:shadowDy="1"
-    android:textColor="#FFFFFF"
-     />
+    android:textColor="#FFFFFF" />
+  -->
 
   <TextView
     android:id="@+id/internal_venueLocationLine2"
