--- a/main/res/layout/mayor.xml
+++ b/main/res/layout/mayor.xml
@@ -4,7 +4,9 @@
 <RelativeLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="fill_parent"
-  android:layout_height="?android:attr/listPreferredItemHeight">
+  android:layout_height="?android:attr/listPreferredItemHeight"
+  android:paddingBottom="10dip"
+  android:visibility="invisible">
 
   <TextView
     android:id="@+id/mayorHeader"
@@ -46,6 +48,8 @@
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
 
+    android:paddingRight="10dip"
+
     android:layout_below="@id/mayorHeader"
     android:layout_toRightOf="@id/mayorPhoto"
     android:layout_alignParentRight="true"
@@ -62,6 +66,8 @@
 
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+
+    android:paddingRight="10dip"
 
     android:layout_below="@id/mayorName"
     android:layout_alignParentRight="true"
