--- a/main/res/layout/empty_loading.xml
+++ b/main/res/layout/empty_loading.xml
@@ -17,5 +17,5 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:gravity="center"
-    android:text="Loading..." />
+    android:text="@string/loading" />
 </LinearLayout>
