--- a/main/res/layout/loadable_list_activity.xml
+++ b/main/res/layout/loadable_list_activity.xml
@@ -10,4 +10,10 @@
     android:layout_height="fill_parent"
     android:layout_width="fill_parent" />
 
+  <include
+    android:id="@android:id/empty"
+    layout="@layout/empty_loading"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent" />
+
 </merge>
