--- a/main/res/layout/empty_loading.xml
+++ b/main/res/layout/empty_loading.xml
@@ -5,7 +5,8 @@
   xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="fill_parent"
   android:layout_height="fill_parent"
-  android:gravity="center">
+  android:gravity="center"
+  android:background="#FFFFFF">
   <ProgressBar
     android:id="@+id/emptyProgress"
     android:layout_width="wrap_content"
