--- a/main/res/layout/venue_activity.xml
+++ b/main/res/layout/venue_activity.xml
@@ -24,8 +24,8 @@
         android:id="@+id/venue"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        foursquared:checkinButton="true"
-        android:background="#FFFFFF" />
+        android:background="#FFFFFF"
+        foursquared:checkinButton="true" />
       <FrameLayout
         android:id="@android:id/tabcontent"
         android:layout_width="fill_parent"
