--- a/main/res/layout/venue_activity.xml
+++ b/main/res/layout/venue_activity.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<merge
   xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:foursquared="http://schemas.android.com/apk/res/com.joelapenna.foursquared"
   android:orientation="vertical"
@@ -35,4 +35,4 @@
     </LinearLayout>
   </TabHost>
 
-</RelativeLayout>
+</merge>
