Use quick checkin drawable selector for quick-checkin button states.

--- a/main/res/values/styles.xml
+++ b/main/res/values/styles.xml
@@ -90,7 +90,7 @@
     <item
       name="android:paddingLeft">16px</item>
     <item
-      name="android:background">@drawable/quick_checkin</item>
+      name="android:background">@drawable/quick_checkin_states</item>
     <item
       name="android:text">Quick-Checkin</item>
     <item
