--- a/main/res/layout-land/login_activity.xml
+++ b/main/res/layout-land/login_activity.xml
@@ -56,7 +56,7 @@
       android:layout_height="wrap_content"
       android:enabled="false"
       android:textAppearance="@android:style/TextAppearance.Large"
-      android:text="Log-in" />
+      android:text="@string/login_label" />
   </LinearLayout>
   <TextView
     android:id="@+id/newAccountTextView"
@@ -67,5 +67,5 @@
     android:paddingBottom="2dip"
     android:textAppearance="@android:style/TextAppearance.Large"
     android:textColor="#0000ee"
-    android:text="Need an account?" />
+    android:text="@string/need_an_account" />
 </RelativeLayout>
