--- a/main/res/layout/venue_activity.xml
+++ b/main/res/layout/venue_activity.xml
@@ -9,7 +9,7 @@
     android:id="@android:id/tabhost"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:layout_below="@+id/venueHeader"
+    android:layout_below="@id/venueHeader"
     style="@style/tabHostStyle">
     <LinearLayout
       android:id="@+id/tabhostlayout"
