Update Add Venue activity to have a "add venue" button and to reject submissions unless they have a name, address, city, state, zip.

--- a/main/res/layout/add_venue_activity.xml
+++ b/main/res/layout/add_venue_activity.xml
@@ -85,6 +85,12 @@
         android:phoneNumber="true"
         android:imeOptions="actionDone"
         android:hint="555-2368" />
+      <Button
+        android:id="@+id/addVenueButton"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:enabled="false"
+        android:text="@string/add_venue_label" />
     </LinearLayout>
   </ScrollView>
 </merge>
