UI Changes for Chris

--- a/main/res/layout/loadable_list_activity.xml
+++ b/main/res/layout/loadable_list_activity.xml
@@ -8,7 +8,9 @@
   <ListView
     android:id="@android:id/list"
     android:layout_height="fill_parent"
-    android:layout_width="fill_parent" />
+    android:layout_width="fill_parent" 
+    android:divider="@drawable/divider"
+     />
 
   <include
     android:id="@android:id/empty"
