--- a/main/res/layout/venue_list_item.xml
+++ b/main/res/layout/venue_list_item.xml
@@ -4,9 +4,15 @@
   xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="fill_parent"
   android:layout_height="?android:attr/listPreferredItemHeight"
-  android:padding="3dip"
   style="@style/listItemStyle">
 
+  <ImageView
+     android:layout_width="fill_parent"
+     android:layout_height="16px"
+     android:src="@drawable/blue_fade"
+     android:layout_alignParentTop="true"
+     />
+  
   <ImageView
     android:id="@+id/icon"
     android:layout_width="30dip"
