--- a/main/res/values/styles.xml
+++ b/main/res/values/styles.xml
@@ -42,18 +42,12 @@
     name="listItemStyle"
     parent="@android:style/Widget.ListView">
     <item
-      name="android:paddingLeft">3dip</item>
-    <item
-      name="android:paddingRight">3dip</item>
-    <item
-      name="android:paddingTop">4dip</item>
-    <item
       name="android:paddingBottom">6dip</item>
     <!--
       Until we can get this gradient looking nice, disable it. -->
-    <!-- <item
-      name="android:background">@drawable/list_item_gradient</item>
-    -->
+    <item
+      name="android:background">#f2f2f2</item>
+
   </style>
 
   <style
