Use offical android color denotations instead of #FFFFFF or #000000

--- a/main/res/layout/empty_loading.xml
+++ b/main/res/layout/empty_loading.xml
@@ -6,7 +6,7 @@
   android:layout_width="fill_parent"
   android:layout_height="fill_parent"
   android:gravity="center"
-  android:background="#FFFFFF">
+  android:background="@android:color/white">
   <ProgressBar
     android:id="@+id/emptyProgress"
     android:layout_width="wrap_content"
