--- a/main/res/layout/login_activity.xml
+++ b/main/res/layout/login_activity.xml
@@ -28,17 +28,15 @@
       android:id="@+id/phoneEditText"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
-      android:inputType="phone"
-      android:lines="1"
+      android:inputType="text"
       android:textAppearance="@android:style/TextAppearance.Large"
-      android:hint="@string/phone_number" />
+      android:hint="@string/phone_number_or_username" />
     <EditText
       android:id="@+id/passwordEditText"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:inputType="textPassword"
       android:imeOptions="actionDone"
-      android:lines="1"
       android:textAppearance="@android:style/TextAppearance.Large"
       android:hint="@string/password" />
     <Button
