--- a/main/res/layout/venue_activity.xml
+++ b/main/res/layout/venue_activity.xml
@@ -29,8 +29,7 @@
       <FrameLayout
         android:id="@android:id/tabcontent"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:background="@android:color/white">
+        android:layout_height="fill_parent">
       </FrameLayout>
     </LinearLayout>
   </TabHost>
