--- a/main/res/values/styles.xml
+++ b/main/res/values/styles.xml
@@ -4,9 +4,11 @@
 <resources>
   <style
     name="FoursquareTheme"
-    parent="android:Theme.Light">
+    parent="@android:style/Theme.Light">
     <item
       name="android:listSeparatorTextViewStyle">@style/listSeparatorTextViewStyle</item>
+    <item
+      name="android:listViewStyle">@style/listViewStyle</item>
   </style>
 
   <style
@@ -38,6 +40,26 @@
       name="android:textColor">@android:color/white</item>
   </style>
 
+  <!--
+    These two styles, listViewStyle and tabHostStyle exist only to allow donut/cupcake to display a
+    black-backgrounded TabWidget while preserving the light color background of the app's listviews.
+  -->
+  <style
+    name="listViewStyle"
+    parent="@android:attr/listViewStyle">
+    <item
+      name="android:background">@android:color/white</item>
+  </style>
+
+  <style
+    name="tabHostStyle">
+    <item
+      name="android:background">@android:color/black</item>
+  </style>
+
+
+  <!--  Manually specified -->
+
   <style
     name="listItemStyle">
     <item
@@ -52,14 +74,6 @@
       name="android:textAppearance">@android:style/TextAppearance.Small</item>
     <item
       name="android:textColor">#74CBE7</item>
-  </style>
-
-  <style
-    name="tabHostStyle">
-    <item
-      name="android:background">@android:color/black</item>
-    <item
-      name="android:paddingTop">4dip</item>
   </style>
 
   <style
