Fix divider style for ListView style.

--- a/main/res/values/styles.xml
+++ b/main/res/values/styles.xml
@@ -49,6 +49,8 @@
     parent="@android:attr/listViewStyle">
     <item
       name="android:background">@android:color/white</item>
+    <item
+      name="android:divider">@drawable/divider</item>
   </style>
 
   <style
