--- a/main/res/layout/loadable_list_activity.xml
+++ b/main/res/layout/loadable_list_activity.xml
@@ -8,8 +8,7 @@
   <ListView
     android:id="@android:id/list"
     android:layout_height="fill_parent"
-    android:layout_width="fill_parent"
-    android:divider="@drawable/divider" />
+    android:layout_width="fill_parent" />
 
   <include
     android:id="@android:id/empty"
