--- a/main/res/values/attrs.xml
+++ b/main/res/values/attrs.xml
@@ -4,5 +4,8 @@
     <attr
       name="checkinButton"
       format="boolean" />
+    <attr
+      name="collapsible"
+      format="boolean" />
   </declare-styleable>
 </resources>
