--- a/main/res/layout/venue_activity.xml
+++ b/main/res/layout/venue_activity.xml
@@ -25,7 +25,8 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:background="@android:color/white"
-        foursquared:checkinButton="true" />
+        foursquared:checkinButton="true"
+        foursquared:collapsible="true" />
       <FrameLayout
         android:id="@android:id/tabcontent"
         android:layout_width="fill_parent"
